working on getting the rest of the footer looking correct as per design
- the contents of clouds.svg is now inline in the html to
  have removed the separate image
- todo: some colours needs to be extracted to vars
  clouds svg is being redone by Jade as the top has
  a few pixels of white space at the top

--- a/app/assets/stylesheets/layouts/_article.scss
+++ b/app/assets/stylesheets/layouts/_article.scss
@@ -48,6 +48,7 @@
   @include respond-to($mq-two-col) {
     @include column(7);
     @include push(3);
+    margin-bottom: baseline-unit(4);
   }
 
   @include respond-to($mq-l) {
