--- a/app/assets/stylesheets/layouts/_footer.scss
+++ b/app/assets/stylesheets/layouts/_footer.scss
@@ -1,56 +1,219 @@
 .l-footer {
-  background: $concrete;
   clear: both;
-
-  &:after {
-    display: block;
-    content: "";
-    background: $white asset-url('clouds.svg') no-repeat top center;
-    background-size: contain;
-    width: 100%;
-    height: 71px;
-    margin-bottom: baseline-unit(1);
-
-    @include respond-to($mq-m) {
-      height: 180px;
-    }
-
-    @include respond-to($mq-l) {
-      height: 374px;
-    }
-  }
-}
-
-.l-footer-subheader {
-  margin-top: baseline-unit(6);
-  text-align: center;
-}
-
-.l-footer .article-tile__heading {
-  @include font-size(24);
 }
 
 .l-footer-links {
+  clear: both;
+  background: $concrete;
+}
+
+.l-footer-links-section {
   @include column(12);
-  border-bottom: 1px solid #e4e4e4;
+  border-top: 1px solid #e4e4e4;
   padding: baseline-unit(3) 0;
+
+  &:first-child {
+    border-top: 0;
+  }
+
+  @include respond-to($mq-two-col) {
+    float: left;
+    width: 35%;
+    border-top: 0;
+  }
+
+  @include respond-to($mq-l) {
+    position: relative;
+    padding: baseline-unit(13) 0;
+    z-index: 2;
+  }
+
+  @include respond-to($mq-xl) {
+    width: 30%;
+  }
 }
 
 .l-footer-link__header {
-  color: $eastern-blue;
+  @include font-size(24);
   margin-bottom: 0;
 }
 
 .l-footer-link__list {
-  .js & {
-    display: none;
+  margin-top: baseline-unit(2);
+
+  @include respond-to($mq-m) {
+    margin-top: baseline-unit(5);
+  }
+}
+
+.l-footer-links-section--helpful {
+  .l-footer-link__list-item {
+    line-height: baseline-unit(2);
   }
 
-  &.is-active {
-    display: block;
+  @include respond-to($mq-two-col) {
+    width: 20%;
+    float: right;
   }
+
+  @include respond-to($mq-xl) {
+    width: 15%;
+  }
+}
+
+.l-footer-link__list-item {
+  margin-top: baseline-unit(4);
+  line-height: baseline-unit(3.5);
 }
 
 .l-footer-link__list-item-time {
   display: block;
+  color: #5f5f5f;
+  margin-top: baseline-unit(1);
+}
+
+.l-footer-clouds {
+  background: $white;
+}
+
+.l-footer-clouds__image {
+  @include respond-to($mq-xl) {
+    max-width: 2000px;
+    margin: 0 auto;
+    display: block;
+    margin-top: baseline-unit(-20);
+  }
+}
+
+.l-newsletter {
+  background: $white;
+}
+
+.l-newsletter__left {
+  @include column(12);
+
+  @include respond-to($mq-m) {
+    float: left;
+    @include column(5);
+    margin-top: baseline-unit(-11);
+    margin-bottom: baseline-unit(6);
+  }
+}
+
+.l-newsletter__right {
+  @include column(12);
+  text-align: center;
+
+  @include respond-to($mq-m) {
+    @include column(5);
+    @include push(2);
+    margin-top: baseline-unit(2);
+  }
+}
+
+.l-newsletter__headline {
+  @include font-size(22);
+  margin-top: baseline-unit(6);
+
+  @include respond-to($mq-m) {
+    margin-top: baseline-unit(10);
+  }
+}
+
+.l-newsletter__text {
+  margin-bottom: baseline-unit(2);
+  clear: both;
+  float: left;
+  width: 100%;
+
+  .l-newsletter__right & {
+    width: 100%;
+    text-align: center;
+    padding-top: baseline-unit(3);
+    border-top: 1px solid #e7e7e7;
+    font-weight: $font-weight-bold;
+    color: $black;
+  }
+
+  .button--primary {
+    width: 100%;
+    max-width: 400px;
+
+    @include respond-to($mq-l) {
+      max-width: none;
+      width: auto;
+    }
+  }
+}
+
+.l-newsletter__logo {
+  display: inline-block;
+}
+
+.l-newsletter__logo-image {
+  @include column(12);
+  margin: baseline-unit(3) 0 0;
+  max-width: 288px;
+}
+
+.l-footer-secondary__list--left {
+  @include column(12);
+  margin-top: baseline-unit(3);
+
+  @include respond-to($mq-l) {
+    @include column(4);
+    margin-top: 0;
+  }
+}
+
+.l-footer-secondary__list--right {
+  @include column(12);
+  padding-bottom: baseline-unit(3);
+
+  @include respond-to($mq-two-col) {
+    display: block;
+  }
+
+  @include respond-to($mq-l) {
+    @include column(8);
+    text-align: right;
+    float: right;
+    padding-bottom: 0;
+  }
+}
+
+.l-footer-secondary {
+  background: $color-green-primary;
+}
+
+.footer-secondary__list-item {
+  margin-bottom: baseline-unit(2);
+
+  @include respond-to($mq-two-col) {
+    display: inline;
+    margin-right: baseline-unit(3);
+  }
+
+  @include respond-to($mq-l) {
+    margin-top: baseline-unit(2);
+    display: inline-block;
+  }
+}
+
+.footer-secondary__link {
+  color: #fff;
+  font-weight: $font-weight-medium;
+  @include font-size(14);
+
+  &:visited,
+  &:hover,
+  &:link {
+    color: #fff;
+  }
+}
+
+.accessibility-feedback-link .icon--accessibility {
+  position: relative;
+  top: 2px;
+  margin-right: 4px;
 }
